--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             u.SendMessage(
               "CubeSpawner","UpdateTransformData",
               JSON.stringify({
-                position: { x: relPos.x/100, y: relPos.y/100, z: -relPos.z/100 },
+                position: { x: relPos.x/100, y: relPos.y/100, z: relPos.z/100 },
                 rotation: {
                   x: -relQuat.x, 
                   y: -relQuat.y, 
