--- a/index.html
+++ b/index.html
@@ -45,19 +45,32 @@
           });
         }
       });
-
-      // 3) your existing cube-follow
       AFRAME.registerComponent("cube-follow", {
         init: function () {
-          this.spawned  = false;
+          this.spawned = false;
           this.cameraEl = this.el.sceneEl.querySelector("[camera]");
-          console.log("[cube-follow] init – cameraEl is", this.cameraEl);
-        },
-        tick: function () {
-          const unity = window.unityInstance;
-          if (!unity?.SendMessage) return;
 
-          const vis = this.el.object3D.visible;
+          // Spawn cube on the exact frame the marker appears
+          this.el.addEventListener("markerFound", () => {
+            console.log("[cube-follow] markerFound → spawning");
+            window.unityInstance.SendMessage("CubeSpawner", "SetTracking", 1);
+            window.unityInstance.SendMessage("CubeSpawner", "SpawnCube");
+            this.spawned = true;
+          });
+
+          // Destroy/hide cube the instant the marker vanishes
+          this.el.addEventListener("markerLost", () => {
+            console.log("[cube-follow] markerLost → destroying");
+            window.unityInstance.SendMessage("CubeSpawner", "SetTracking", 0);
+            this.spawned = false;
+          });
+        },
+
+        tick: function () {
+          // Only send pose updates if we have spawned the cube
+          if (!this.spawned || !window.unityInstance?.SendMessage) return;
+
+          // Compute camera-relative marker pose exactly as before
           const markerMat = this.el.object3D.matrixWorld;
           const camMat    = this.cameraEl.object3D.matrixWorld;
           const camInv    = new THREE.Matrix4().copy(camMat).invert();
@@ -66,27 +79,15 @@
           const relPos  = new THREE.Vector3().setFromMatrixPosition(relMat);
           const relQuat = new THREE.Quaternion().setFromRotationMatrix(relMat);
 
-          if (vis && !this.spawned) {
-            unity.SendMessage("CubeSpawner","SetTracking",1);
-            unity.SendMessage("CubeSpawner","SpawnCube");
-            this.spawned = true;
-            console.log("[cube-follow] spawn");
-          }
-          if (vis && this.spawned) {
-            unity.SendMessage(
-              "CubeSpawner","UpdateTransformData",
-              JSON.stringify({
-                position: { x:relPos.x/100, y:relPos.y/100, z:-relPos.z/100 },
-                rotation: { x:-relQuat.x, y:-relQuat.y, z:relQuat.z, w:relQuat.w }
-              })
-            );
-          }
-          if (!vis && this.spawned) {
-            unity.SendMessage("CubeSpawner","SetTracking",0);
-            this.spawned = false;
-            console.log("[cube-follow] lost");
-          }
-        },
+          // Send updated transform each frame
+          window.unityInstance.SendMessage(
+            "CubeSpawner", "UpdateTransformData",
+            JSON.stringify({
+              position: { x: relPos.x/100, y: relPos.y/100, z: -relPos.z/100 },
+              rotation: { x: -relQuat.x, y: -relQuat.y, z: relQuat.z, w: relQuat.w }
+            })
+          );
+        }
       });
     </script>
   </head>
