--- a/index.html
+++ b/index.html
@@ -47,45 +47,40 @@
       });
       AFRAME.registerComponent("cube-follow", {
         init: function () {
-          this.spawned = false;
+          this.spawned  = false;
           this.cameraEl = this.el.sceneEl.querySelector("[camera]");
 
-          // Spawn cube on the exact frame the marker appears
           this.el.addEventListener("markerFound", () => {
+            const unity = window.unityInstance;
+            if (!unity?.SendMessage) {
+              console.warn("[cube-follow] markerFound but Unity not ready yet");
+              return;
+            }
             console.log("[cube-follow] markerFound → spawning");
-            window.unityInstance.SendMessage("CubeSpawner", "SetTracking", 1);
-            window.unityInstance.SendMessage("CubeSpawner", "SpawnCube");
+            unity.SendMessage("CubeSpawner", "SetTracking", 1);
+            unity.SendMessage("CubeSpawner", "SpawnCube");
             this.spawned = true;
           });
 
-          // Destroy/hide cube the instant the marker vanishes
           this.el.addEventListener("markerLost", () => {
+            const unity = window.unityInstance;
+            if (!unity?.SendMessage) return;
             console.log("[cube-follow] markerLost → destroying");
-            window.unityInstance.SendMessage("CubeSpawner", "SetTracking", 0);
+            unity.SendMessage("CubeSpawner", "SetTracking", 0);
             this.spawned = false;
           });
         },
 
         tick: function () {
-          // Only send pose updates if we have spawned the cube
-          if (!this.spawned || !window.unityInstance?.SendMessage) return;
+          if (!this.spawned) return;
+          const unity = window.unityInstance;
+          if (!unity?.SendMessage) return;
 
-          // Compute camera-relative marker pose exactly as before
-          const markerMat = this.el.object3D.matrixWorld;
-          const camMat    = this.cameraEl.object3D.matrixWorld;
-          const camInv    = new THREE.Matrix4().copy(camMat).invert();
-          const relMat    = new THREE.Matrix4().multiplyMatrices(camInv, markerMat);
-
-          const relPos  = new THREE.Vector3().setFromMatrixPosition(relMat);
-          const relQuat = new THREE.Quaternion().setFromRotationMatrix(relMat);
-
-          // Send updated transform each frame
-          window.unityInstance.SendMessage(
-            "CubeSpawner", "UpdateTransformData",
-            JSON.stringify({
-              position: { x: relPos.x/100, y: relPos.y/100, z: -relPos.z/100 },
-              rotation: { x: -relQuat.x, y: -relQuat.y, z: relQuat.z, w: relQuat.w }
-            })
+          // ... your existing camera-relative pose math ...
+          unity.SendMessage(
+            "CubeSpawner",
+            "UpdateTransformData",
+            JSON.stringify({ /* position + rotation payload */ })
           );
         }
       });
